kubeadm/samples/traefik-resources.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
spec:
  entryPoints:
    - traefik
  routes:
  - kind: Rule
    match: Host(`traefik.minimum.stage1.example`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
    services:
    - name: traefik
      port: 8080
      traefik.minimum.stage1.example
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: websecure
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`registry.minimum.stage1.example`)
    priority: 12
    services:
    - kind: Service
      name: local-registry-nginx
      port: 443
      strategy: RoundRobin
      tls:
        passthrough: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`registry.minimum.stage1.example`)
    priority: 12
    services:
    - kind: Service
      name: local-registry
      port: 5000
      strategy: RoundRobin
  - kind: Rule
    match: Host(`stream-services.minimum.stage1.example`) && PathPrefix(`/test`)
    priority: 12
    services:
    - kind: Service
      name: nginx-test
      port: 80
      strategy: RoundRobin
  - kind: Rule
    match: PathPrefix(`/priority`)
    services:
    - kind: Service
      name: nginx-priority
      port: 80
  - kind: Rule
    match: PathPrefix(`/dashboard`)
    services:
    - kind: Service
      name: kubernetes-dashboard
      port: 443
      tls:
      - passthrough: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: whoami-tcp
spec:
  entryPoints:
    - whoami
  routes:
  - match: HostSNI(`*`)
    services:
    - name: whoami
      port: 80
---
